--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">HackingEDU</string>
     <string name="action_camera">Take Photo</string>
+    <string name="action_help">Email for help!</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_map_view_image">MapViewImageActivity</string>
